--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -395,7 +395,7 @@
           <div class="col-md-auto" th:text="${board.username}">
             <i class="bi bi-person"></i>
           </div>
-          <div class="col-md-auto" th:text="${board.bpostdate}">
+          <div class="col-md-auto" th:text="${#temporals.format(board.bpostdate, 'yyyy-MM-dd HH:mm')}">
             <i class="bi bi-calendar"></i>
           </div>
           <div class="col-md-auto" th:text="${board.bvisitcount}">
@@ -447,7 +447,7 @@
     <div class="text-center">
       <div class="btn-group pt-5" role="group" aria-label="Basic example">
 <!--        <c:if test="${not empty sessionScope.u_id and sessionScope.u_id eq dto.u_id}">-->
-          <button type="button" id="modify-btn" class="btn btn-primary btn-sm" th:onclick="|location.href='@{/write(bid=${board.bid})}'|">수정</button>
+          <button type="button" id="modify-btn" class="btn btn-primary btn-sm" th:onclick="|location.href='@{/write?bid={boardid}(boardid=${board.bid})}'|">수정</button>
           <button type="button" id="delete-btn" class="btn btn-primary btn-sm">삭제</button>
 <!--        </c:if>-->
 
