--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -405,7 +405,9 @@
       <!--첨부파일 표시-->
 <!--      <c:if test="${not empty dto.b_ofile}">-->
         <hr class="my-4">
-        첨부파일 &nbsp;&nbsp; <i class="bi bi-file-earmark-image"></i> ${dto.b_ofile}
+        첨부파일
+        <i class="bi bi-file-earmark-image"></i>
+<!--        <img th:if="${board.bofile} != null" th:src="@{${board.bsfile}}"/>-->
 <!--      </c:if>-->
     </div>
 
