--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -96,7 +96,7 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">첨부 파일</label>
             <div class="col-sm-10">
-                <input type="file" name="b_ofile"/>
+                <input type="file" name="imgList[]" multiple/>
             </div>
         </div>
 
